Add public spots API
